--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/smh7/weather-app#readme",
   "dependencies": {
-    "dotenv": "^5.0.1"
+    "dotenv": "^5.0.1",
+    "lodash": "^4.17.10",
+    "request": "^2.86.0",
+    "yargs": "^4.7.1"
   }
 }
