--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "dotenv": "^5.0.1",
     "lodash": "^4.17.10",
     "node-fetch": "^2.1.2",
+    "node-spotify-api": "^1.0.7",
     "request": "^2.86.0",
-    "spotify-wrapper": "^2.0.5",
     "twitter": "^1.7.1",
     "util": "^0.10.3",
     "yargs": "^4.7.1"
