--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.10",
     "node-fetch": "^2.1.2",
     "node-spotify-api": "^1.0.7",
+    "omdb-client": "^2.0.0",
     "request": "^2.86.0",
     "twitter": "^1.7.1",
     "util": "^0.10.3",
