--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "quick app to explore nodeJS,  APIs, and the joys of asynchronous programming",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./geocode/**.test.js"
   },
   "repository": {
     "type": "git",
@@ -28,5 +28,10 @@
     "util": "^0.10.3",
     "weather-js": "^2.0.0",
     "yargs": "^4.7.1"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0",
+    "tap": "^12.0.1"
   }
 }
